# application_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.prod  Dockerfile.test  docker-compose-prod.yaml  fly.toml  sqlx-data.json
.sqlx/: query-3e3b633183fa5d0afecdadc7f915a3f1fbb0ba584d1fb7058b14aae2e8109480.json  query-8aa50c3e73565ef0797b0b983272d44d26c3bc5a82dc4444338ee4628b937000.json  query-b06672582c8c0fa21f1ae232658848beaf73267a7fd2fc95ff5b6ca909ab83b4.json  query-dd30f213b7fc847eb4b2c955b251c445429ca10f4059a0a4a2781c3923277b4f.json  query-ef9605b0aaf00c970c47f00c377670557144aac8eb7a24fd4d44ae461b491be7.json
migrations/: 20221127025021_init.sql  20230807190827_init.sql
soln/: resturants_api.py
src/: config.rs
src/db/: transactions.rs
src/endpoints/: errors.rs  messages.rs  routes.rs  server.rs
src/model/: engine.rs  types.rs
