[package]
name = "generate-tech-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
warp = "0.3.2"
serde = "1.0.143"
pretty_env_logger = "0.5.0"
serde_derive = "1.0.143"
log = "0.4.17"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "json",
    "postgres",
    "chrono",
    "uuid",
] }
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.22"
serde_json = "1.0"
thiserror = "1.0.32"
rand = "0.8.5"
random-string = "1.0.0"
dotenv = "0.15.0"
config = "0.13"
temp-env = "0.3.0"
strum = { version = "0.25", features = ["derive"] }
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
